# Zygisk-Il2CppDumper

module/src/main/cpp/: CMakeLists.txt
